kustomize/staging/ingress-override.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wkapp-ingress
spec:
  tls:
    - hosts:
        - staging.wk-frontend.haze.alt.coop
      secretName: tls-secrets
  rules:
    - host: staging.wk-frontend.haze.alt.coop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wkapp
                port:
                  number: 5000
